✨feat(controller_user): affichage de l'index de tous les users

--- a/client/src/styles/components/_tweet.scss
+++ b/client/src/styles/components/_tweet.scss
@@ -5,6 +5,10 @@
   padding-bottom: 60px;
   width: 100%;
 
+  .link:hover {
+    text-decoration: underline;
+  }
+
   .edit-delete {
     position: absolute;
     right: 20px;
